// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-language-items should get language item by isoCode 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "isoCode": "en-GB",
        "name": "_Test Language Items",
      },
    ],
  },
}
`;

exports[`get-language-items should handle non-existent isoCode 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
  },
}
`;
